[package]
name = "downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
log = "0.4.29"
pretty_env_logger = "0.5.0"
reqwest = "0.12.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true